# ChangeLog for net-im/ekg
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/ekg/ChangeLog,v 1.35 2007/08/26 17:21:14 armin76 Exp $

  26 Aug 2007; Raúl Porcel <armin76@gentoo.org> ekg-1.7.ebuild:
  alpha/ia64/x86 stable wrt #189735

*ekg-1.7 (16 May 2007)

  16 May 2007; Michał Januszewski <spock@gentoo.org> +ekg-1.7.ebuild:
  Version bump.

*ekg-1.7_rc3 (17 Mar 2007)

  17 Mar 2007; Michał Januszewski <spock@gentoo.org> +ekg-1.7_rc3.ebuild:
  Version bump.

  23 Oct 2006; Michał Januszewski <spock@gentoo.org> ekg-1.6_rc3.ebuild,
  ekg-1.6.ebuild, ekg-1.7_rc2.ebuild:
  Add autoconf/automake deps (bug #152527).

*ekg-1.7_rc2 (23 Oct 2006)

  23 Oct 2006; Michał Januszewski <spock@gentoo.org>
  +files/ekg-1.7_rc2-giflib.patch, +ekg-1.7_rc2.ebuild:
  Version bump.

  07 Jul 2006; Michał Januszewski <spock@gentoo.org> ekg-1.6_rc3.ebuild,
  ekg-1.6.ebuild:
  URL update (bug #139357).

  07 Jul 2006; Michał Januszewski <spock@gentoo.org> -ekg-1.4-r1.ebuild,
  -ekg-1.5.ebuild:
  Removed old ebuilds.

  19 Feb 2006; Michał Januszewski <spock@gentoo.org>
  +files/ekg-1.6-dragonfly.patch, metadata.xml, ekg-1.6.ebuild:
  Added a patch by Robert Sebastian Gerus to allow compiling ekg on DragonFly
  (bug #123250). Updated metadata.

*ekg-1.6 (10 Dec 2005)

  10 Dec 2005; Michał Januszewski <spock@gentoo.org> -ekg-1.6_rc1.ebuild,
  -ekg-1.6_rc1-r1.ebuild, +ekg-1.6.ebuild:
  Version bump. Removed old ebuilds.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> ekg-1.6_rc3.ebuild:
  Mark 1.6_rc3 stable on alpha

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> ekg-1.6_rc3.ebuild:
  stable on ia64

  25 Jul 2005; <sekretarz@gentoo.org> ekg-1.6_rc3.ebuild:
  Stable on x86 due security bug #99583

  21 Jul 2005; Jory A. Pratt <anarchy@gentoo.org> ekg-1.6_rc3.ebuild:
  Stable on PPC. bug #99583

  21 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> ekg-1.6_rc3.ebuild: