@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ekg-1.6-dragonfly.patch 1223 RMD160 70fb85e06df80a5d0739e38c886a879c74067348 SHA1 41be21fbbe883b58e83e083130d9a9fa78a3eba5 SHA256 102bde3b50cb940ff10d390d18db147aa736df8570c6a92b592bce5930eee6f5
 MD5 9442697640d76bbc5493414454cbcc87 files/ekg-1.6-dragonfly.patch 1223
 RMD160 70fb85e06df80a5d0739e38c886a879c74067348 files/ekg-1.6-dragonfly.patch 1223
@@ -27,10 +30,10 @@ EBUILD ekg-1.6_rc3.ebuild 1556 RMD160 ac3fc920ec69255620270d32a88ee932912bcf89 S
 MD5 1ab843820ccfd5aefbd7c983283b30e6 ekg-1.6_rc3.ebuild 1556
 RMD160 ac3fc920ec69255620270d32a88ee932912bcf89 ekg-1.6_rc3.ebuild 1556
 SHA256 737994b714302fd644d182b4d9ac16e1e30b047734c8d5541bd7d38d085b392d ekg-1.6_rc3.ebuild 1556
-EBUILD ekg-1.7.ebuild 1663 RMD160 b87881954f482be4acf48a6cf8f5576bb6e902b0 SHA1 a030beb73aef3fe5222529b7220d7e2c0581870c SHA256 01774e57b418954da26d5aca280b03c0f768d68ef859808affddccb08f744e71
-MD5 9c08dadcc56086c215f1c8c863ab5036 ekg-1.7.ebuild 1663
-RMD160 b87881954f482be4acf48a6cf8f5576bb6e902b0 ekg-1.7.ebuild 1663
-SHA256 01774e57b418954da26d5aca280b03c0f768d68ef859808affddccb08f744e71 ekg-1.7.ebuild 1663
+EBUILD ekg-1.7.ebuild 1675 RMD160 355fbd5355705090e964a49bbbc534e39d8a0593 SHA1 2bc2aeb1badbcbbb10da224bb4ab7a2997c5a9ac SHA256 4e5617cc22c16aa0b1f741a14c24a34aa417b2105b5eb08b9cc58b83ab9f6e1f
+MD5 f0c88f8d15382e0cd49bab37805e71b1 ekg-1.7.ebuild 1675
+RMD160 355fbd5355705090e964a49bbbc534e39d8a0593 ekg-1.7.ebuild 1675
+SHA256 4e5617cc22c16aa0b1f741a14c24a34aa417b2105b5eb08b9cc58b83ab9f6e1f ekg-1.7.ebuild 1675
 EBUILD ekg-1.7_rc2.ebuild 1668 RMD160 63a1af7e5c477cdf1185f659493872409846dc40 SHA1 b0604c1cd4e4de32250a72547a9fdffec0644545 SHA256 d10be2e932bfdc805dbb390ce9d0345f2e1eef721cd83e23fd3e127ea16aaea5
 MD5 f6814bf1bb165a82bb7ed3fb8b875826 ekg-1.7_rc2.ebuild 1668
 RMD160 63a1af7e5c477cdf1185f659493872409846dc40 ekg-1.7_rc2.ebuild 1668
@@ -39,10 +42,10 @@ EBUILD ekg-1.7_rc3.ebuild 1668 RMD160 789722fc53767243467c4c47d1c5070650779f24 S
 MD5 35986530fe0a6e31d7df77c7fc71dba5 ekg-1.7_rc3.ebuild 1668
 RMD160 789722fc53767243467c4c47d1c5070650779f24 ekg-1.7_rc3.ebuild 1668
 SHA256 60fece90c6694ec84cb8aa4a4ceab83fcd44957aaa22cb1d2db008eb2a7c96d4 ekg-1.7_rc3.ebuild 1668
-MISC ChangeLog 5118 RMD160 0a8f7562e67125b604078df7dcaf9f207cd0a347 SHA1 3a47b9b38c8a8d53ac7080da800f47fe002d0b63 SHA256 ac07e911c42b2a6873de8980161f20664090c91049db5cb81ad282cd42b882ad
-MD5 c252e29596a057a2c34f66656012f69e ChangeLog 5118
-RMD160 0a8f7562e67125b604078df7dcaf9f207cd0a347 ChangeLog 5118
-SHA256 ac07e911c42b2a6873de8980161f20664090c91049db5cb81ad282cd42b882ad ChangeLog 5118
+MISC ChangeLog 5228 RMD160 919a0542cccb71f1f0ad554d61c5c7175aabea08 SHA1 d1d14164a91cf86408b5532e537feab1945c5bd4 SHA256 479ac7cb1138d87db51fcbf15fe15624870cb61e736cfec33050e42e8977ce63
+MD5 cebc8f073f80829ad11829a1cb0c3c25 ChangeLog 5228
+RMD160 919a0542cccb71f1f0ad554d61c5c7175aabea08 ChangeLog 5228
+SHA256 479ac7cb1138d87db51fcbf15fe15624870cb61e736cfec33050e42e8977ce63 ChangeLog 5228
 MISC metadata.xml 252 RMD160 37333b41f65c0bb86b1e85296f5a38390ce16391 SHA1 703b268bdc76b083b71adc51ad11c15f96c86068 SHA256 af0e23920b67dbfbd701796b98ee6a0d538d6a4f0e7957e39abc25d2047932a4
 MD5 25a16623451282a32f02e65189cf1298 metadata.xml 252
 RMD160 37333b41f65c0bb86b1e85296f5a38390ce16391 metadata.xml 252
@@ -62,3 +65,10 @@ SHA256 83cdad3c6fd25cc3610a3ae690c734a65829b3f713ebb426280f900abc0f97ac files/di
 MD5 3e45d36d42fa1303063d2313e4b5eecb files/digest-ekg-1.7_rc3 232
 RMD160 cdcd212b3137b68578662a897bcbc2971003aed6 files/digest-ekg-1.7_rc3 232
 SHA256 726a0c9475ad698618637e4d5c46591ccea9b5cf318f6dc433c13b90c90b559b files/digest-ekg-1.7_rc3 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.6 (GNU/Linux)
+
+iD8DBQFG0f7Vchej4aZK9/cRAofIAJ0QZolX5WyQo2borxRiFeV19XGyYQCfUXpS
+RqYR2LQQkKgaiBSqjArU5R4=
+=3nuq
+-----END PGP SIGNATURE-----
