@@ -1,6 +1,9 @@
 # ChangeLog for net-im/ekg
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/ekg/ChangeLog,v 1.35 2007/08/26 17:21:14 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/ekg/ChangeLog,v 1.36 2007/08/26 22:29:41 spock Exp $
+
+  26 Aug 2007; Michał Januszewski <spock@gentoo.org> ekg-1.7.ebuild:
+  Fix issues pointed out in bug #189735.
 
   26 Aug 2007; Raúl Porcel <armin76@gentoo.org> ekg-1.7.ebuild:
   alpha/ia64/x86 stable wrt #189735
